--- a/src/02-video.html
+++ b/src/02-video.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/common.css" />
   </head>
   <body>
-    <p><a class="button-link" ="index.html">Go back</a></p>
+    <p><a class="button-link" href="index.html">Go back</a></p>
 
     <iframe
       id="vimeo-player"
@@ -22,9 +22,9 @@
 
     <!-- <script src="https://player.vimeo.com/api/player.js"></script> -->
 
-    <!-- <script src="
+    <script src="
 https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js
-"></script> -->
+"></script>
     <script src="js/02-video.js" type="module"></script>
   </body>
 </html>
